--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -10,25 +10,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
 
       - name: Cache dependencies
         id: cache
         uses: actions/cache@v4
         with:
-          path: ~/.cache/pip
+          path: my-cache-folder
           key: cache-d59a55c
+
+      - name: Create folder if not exists
+        run: mkdir -p my-cache-folder
 
       - name: prime-cache-d59a55c
         run: |
-          echo "Cache hit? -> ${{ steps.cache.outputs.cache-hit }}"
-
-      - name: Install dependencies
-        run: |
-          pip install requests
+          echo "Cache hit? -> $CACHE_HIT"
+        env:
+          CACHE_HIT: ${{ steps.cache.outputs.cache-hit }}
